Add Webpack bundling

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "main": "src/main.js",
   "scripts": {
+    "build": "webpack src/main.js bundle.js",
+    "lint": "eslint . --ignore-path .gitignore",
     "publish": "node publish.js"
   },
   "repository": {
@@ -22,5 +24,8 @@
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0"
+  },
+  "dependencies": {
+    "webpack": "^1.13.3"
   }
 }
