Simplify scripts for new room

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,13 @@
 {
   "env": {
-      "node": true
+    "node": true
   },
   "extends": "airbnb-base",
   "rules": {
     "semi": ["error", "never"],
     "no-console": 0,
-    "global-require": 0
+    "global-require": 0,
+    "no-param-reassign": 0
   },
   "globals": {
     "Game": false,
@@ -21,6 +22,7 @@
     "STRUCTURE_SPAWN": false,
     "RESOURCE_ENERGY": false,
     "FIND_CONSTRUCTION_SITES": false,
-    "LOOK_SOURCES": false
+    "LOOK_SOURCES": false,
+    "OK": false
   }
 }
