--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "webpack",
     "lint": "eslint . --ignore-path .gitignore",
-    "deploy": "node deploy.js"
+    "deploy": "node deploy.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,8 @@
   "devDependencies": {
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^10.0.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "jest": "^17.0.3"
   },
   "dependencies": {
     "webpack": "^1.13.3"
