--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,9 @@
     "FIND_CONSTRUCTION_SITES": false,
     "LOOK_SOURCES": false,
     "LOOK_TERRAIN": false,
-    "OK": false
+    "OK": false,
+    "STRUCTURE_CONTAINER": false,
+    "LOOK_CONSTRUCTION_SITES": false,
+    "LOOK_STRUCTURES": false
   }
 }
