--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "ERR_NOT_ENOUGH_ENERGY": false,
     "STRUCTURE_WALL": false,
     "FIND_SOURCES_ACTIVE": false,
+    "STRUCTURE_TOWER": false,
     "_": false,
   }
 }
